Fixed a layout issue with facebook social sharing

--- a/css/main.scss
+++ b/css/main.scss
@@ -19,6 +19,4 @@ $grey-color-dark:  darken($grey-color, 25%);
 
 .social-facebook{
   margin: 1em 0px;
-  border: solid #ccc;
-  border-width: 1px 0px 0px 0px;
 }
